tests/invalid/syntax/effect_on_struct.nyx
// Invalid: Effect marker on struct definition
struct! InvalidEffect
    x: i32
    y: i32
